# file-server-client

./: .gitignore  CMakeLists.txt  README.md  client.c  config.h  main.c  server.c
client/: CMakeLists.txt  client.c  client.h
file/: CMakeLists.txt  file_process.c  file_process.h
log/: CMakeLists.txt
md5/: CMakeLists.txt  md5.c  md5.h
network/: CMakeLists.txt  network.c  network.h
progressbar/: CMakeLists.txt  progressbar.h  statusbar.h
server/: CMakeLists.txt  server.c  server.h
str/: CMakeLists.txt  strUtils.c  strUtils.h
thread/: CMakeLists.txt  thread.c  thread.h
